--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I'm Sorry</title>
+    <title>Sorry</title>
     <style>
         body {
             margin: 0;
@@ -14,7 +14,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-image: url('https://i.imgur.com/xXYzV2y.gif'); /* Cute background gif */
+            background-image: url('https://i.pinimg.com/736x/0b/c5/54/0bc554298bc011122c40474d7a95cd0c.jpg');
             background-size: cover;
         }
 
