--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <body>
 
     <div class="container">
-        <h1>I'm Sorry 😔</h1>
+        <h1>I'm Sorry 🥺</h1>
 
         <div class="gif-container">
             <img src="https://media.tenor.com/Q9VuGIKQqEMAAAAj/love-bear.gif" alt="Sorry GIF">
